--- a/.github/workflows/dbm-offline.yml
+++ b/.github/workflows/dbm-offline.yml
@@ -17,6 +17,6 @@ jobs:
         uses: DeadlyBossMods/DBM-Offline@main
         with:
           repo-under-test: mop
-          dbm-mod-ref-dungeons: ${{ github.event_name == 'pull_request' && github.event.pull_request.head.sha || github.event.after }}
-          dbm-mod-base-ref-dungeons: ${{ github.event_name == 'pull_request' && github.event.pull_request.base.sha || github.event.before }}
+          dbm-mod-ref-mop: ${{ github.event_name == 'pull_request' && github.event.pull_request.head.sha || github.event.after }}
+          dbm-mod-base-ref-mop: ${{ github.event_name == 'pull_request' && github.event.pull_request.base.sha || github.event.before }}
           test-dbm-mop-mods: true
